automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   </head>
   <body>
     <main id="main">
-    </main>
-    <script src="handlebars.js"></script>
-    <script src="index.js"></script>
+    <a href="#" onclick="getRepositories()">Get Repositories</a>
+    <div id="repositories"></div>
+  </main>
+  <script src="handlebars.js"></script>
+  <script src="index.js"></script>
   </body>
 </html>
